fixed footer overlapping messages

--- a/app/assets/stylesheets/computer/messages.scss
+++ b/app/assets/stylesheets/computer/messages.scss
@@ -8,7 +8,7 @@
   border-left: 0;
   border-top: 0;
   margin-bottom: 0;
-  height: calc(100vh - 6.5rem);
+  height: calc(100vh - 9.7rem);
   overflow-y: scroll;
   overflow-x: hidden;
   -ms-overflow-style: none; /* IE and Edge */
@@ -16,7 +16,7 @@
 }
 
 .callout.msg {
-  height: calc(100vh - 13.75rem);
+  height: calc(100vh - 17.02rem);
   border-radius: 0;
   border: 0;
   margin-bottom: 0;
@@ -41,7 +41,7 @@
 }
 
 .callout.msg.blank {
-  height: calc(100vh - 6.45rem);
+  height: calc(100vh - 9.7rem);
   border-radius: 0;
   border: 0;
   margin-bottom: 0;
